--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
         <header class="flex justify-between items-center">
             <div class="flex items-center">
                 <!-- Logo -->
-                <img src="Tree Data Science.jpg" alt="NAMU Data Science Logo" class="h-10 w-10 mr-3" onerror="this.onerror=null;this.src='https://placehold.co/40x40/113F67/FFFFFF?text=N';">
+                <img src="logo.jpg" alt="NAMU Data Science Logo" class="h-10 w-10 mr-3" onerror="this.onerror=null;this.src='https://placehold.co/40x40/113F67/FFFFFF?text=N';">
                 <h1 class="text-2xl font-bold">NAMU Data Science</h1>
             </div>
             <nav class="hidden md:flex items-center space-x-6">
